프론트 기능 확인 완료 및 api 주소별 기능 readme 파일에 정리

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,8 @@
-@import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
+/* 다크모드용 변수 선언 */
 :root {
   --background: #ffffff;
   --foreground: #171717;
